project.flutter/core_plugin/src/core.h

enum ErrorCode {
    ErrorNone,

    ErrorCouldNotOpenProgram,
    ErrorTooManyTokens,
    ErrorRomIsFull,
    ErrorIndexAlreadyDefined,
    ErrorUnterminatedString,
    ErrorUnexpectedCharacter,
    ErrorReservedKeyword,
    ErrorSyntax,
    ErrorSymbolNameTooLong,
    ErrorTooManySymbols,
    ErrorTypeMismatch,
    ErrorOutOfMemory,
    ErrorElseWithoutIf,
    ErrorEndIfWithoutIf,
    ErrorExpectedCommand,
    ErrorNextWithoutFor,
    ErrorLoopWithoutDo,
    ErrorUntilWithoutRepeat,
    ErrorWendWithoutWhile,
    ErrorLabelAlreadyDefined,
    ErrorTooManyLabels,
    ErrorExpectedLabel,
    ErrorUndefinedLabel,
    ErrorArrayNotDimensionized,
    ErrorArrayAlreadyDimensionized,
    ErrorVariableAlreadyUsed,
    ErrorIndexOutOfBounds,
    ErrorWrongNumberOfDimensions,
    ErrorInvalidParameter,
    ErrorReturnWithoutGosub,
    ErrorStackOverflow,
    ErrorOutOfData,
    ErrorIllegalMemoryAccess,
    ErrorTooManyCPUCyclesInInterrupt,
    ErrorNotAllowedInInterrupt,
    ErrorIfWithoutEndIf,
    ErrorForWithoutNext,
    ErrorDoWithoutLoop,
    ErrorRepeatWithoutUntil,
    ErrorWhileWithoutWend,
    ErrorExitNotInsideLoop,
    ErrorDirectoryNotLoaded,
    ErrorDivisionByZero,
    ErrorVariableNotInitialized,
    ErrorArrayVariableWithoutIndex,
    ErrorEndSubWithoutSub,
    ErrorSubWithoutEndSub,
    ErrorSubCannotBeNested,
    ErrorUndefinedSubprogram,
    ErrorExpectedSubprogramName,
    ErrorArgumentCountMismatch,
    ErrorSubAlreadyDefined,
    ErrorTooManySubprograms,
    ErrorSharedOutsideOfASubprogram,
    ErrorGlobalInsideOfASubprogram,
    ErrorExitSubOutsideOfASubprogram,
    ErrorKeyboardNotEnabled,
    ErrorAutomaticPauseNotDisabled,
    ErrorNotAllowedOutsideOfInterrupt,
		ErrorUserDeviceDiskFull,

		ErrorMax
};
struct CoreError {
    enum ErrorCode code;
    int sourcePosition;
};
// ================ Gamepad ================

// union Gamepad {
//     struct {
//         uint8_t up:1;
//         uint8_t down:1;
//         uint8_t left:1;
//         uint8_t right:1;
//         uint8_t buttonA:1;
//         uint8_t buttonB:1;
//     };
//     uint8_t value;
// };

// ================ Status ================

union IOStatus
{
	struct
	{
		uint8_t pause : 1;
		uint8_t touch : 1;
		uint8_t keyboardEnabled : 1;
	};
	uint8_t value;
};
// ================ Attributes ================

// union IOAttributes {
//     struct {
//     };
//     uint8_t value;
// };

// ===============================================
// ================ I/O Registers ================
// ===============================================

struct IORegisters
{
	// TODO: remove gamepad
	// union Gamepad gamepads[NUM_GAMEPADS]; // 2 bytes
	float touchX;
	float touchY;
	struct
	{
		uint16_t width, height;
	} shown;
	struct
	{
		uint16_t left, top, right, bottom;
	} safe;
	char key;
	union IOStatus status;
	// union IOAttributes attr;
};
struct Core;
// ================ Plane ================

// 8 Kibi
struct Plane {
    struct Cell cells[PLANE_ROWS][PLANE_COLUMNS];
};
// ===========================================
// ================ Video RAM ================
// ===========================================

// 36Kibi
struct VideoRam {
    struct Plane planeA; // 8Kibi
    struct Plane planeB; // 8Kibi
    struct Plane planeC; // 8Kibi
    struct Plane planeD; // 8Kibi
    struct Character characters[NUM_CHARACTERS]; // 4Kibi
};
// =================================================
// ================ Video Registers ================
// =================================================

struct SpriteRegisters {
    struct Sprite sprites[NUM_SPRITES]; // 1020 bytes
};
struct ColorRegisters {
    uint8_t colors[NUM_PALETTES * 4]; // 32 bytes
};
// union ScrollMSB {
//     struct {
//         uint8_t aX:1;
//         uint8_t aY:1;
//         uint8_t bX:1;
//         uint8_t bY:1;
//         uint8_t cX:1;
//         uint8_t cY:1;
//         uint8_t dX:1;
//         uint8_t dY:1;
//     };
//     uint8_t value;
// };

struct VideoRegisters {
    uint16_t scrollAX;
    uint16_t scrollAY;
    uint16_t scrollBX;
    uint16_t scrollBY;
    uint16_t scrollCX;
    uint16_t scrollCY;
    uint16_t scrollDX;
    uint16_t scrollDY;
    // union ScrollMSB scrollMSB;
    uint16_t rasterLine;
    union DisplayAttributes attr;
};
struct Core;
struct AudioRegisters {
    struct Voice voices[NUM_VOICES];
};
struct AudioInternals {
    struct VoiceInternals voices[NUM_VOICES];
    struct AudioRegisters buffers[NUM_AUDIO_BUFFERS];
    int readBufferIndex;
    int writeBufferIndex;
    bool audioEnabled;
    int32_t filterBuffer[NUM_CHANNELS][AUDIO_FILTER_BUFFER_SIZE];
};
struct DmaRegisters {
  uint16_t src_addr; // Support RAM or ROM
  uint16_t bytes_count;
  uint16_t dst_addr; // Only RAM
};
struct Core;
// 128Kibi
struct Machine {

    // 0x00000..0x09000
    struct VideoRam videoRam; // 36Kibi

    // 0x09000..0x0E000
    uint8_t workingRam[0x05000]; // 20Kibi

    // 0x0E000..0x0F800
    uint8_t persistentRam[PERSISTENT_RAM_SIZE]; // 6Kibi

    // TODO: absorbe nothing1 into persidentRam

    // 0x0F800..0x0FB00
    uint8_t nothing1[0x0FB00-0x0F800]; // 768 Bytes

    // 0x0FB00..0x0FF00
    struct SpriteRegisters spriteRegisters; // 1Kibi
    uint8_t nothing2[0x400 - sizeof(struct SpriteRegisters)]; // 4 bytes

    // 0x0FF00
    struct ColorRegisters colorRegisters; // 32Bytes

    // 0xFF20
    struct VideoRegisters videoRegisters;
    uint8_t nothing3[0x20 - sizeof(struct VideoRegisters)]; // 12 Bytes

    // 0xFF40
    struct AudioRegisters audioRegisters;

    // 0xFF70
    struct IORegisters ioRegisters;
    uint8_t nothing5[0x30 - sizeof(struct IORegisters)]; // 18 Bytes

    // 0xFFA0
    struct DmaRegisters dmaRegisters;
    uint8_t nothing6[0x10 - sizeof(struct DmaRegisters)]; // 10 Bytes

    // 0xFFB0
    uint8_t nothing7[0x10000 - 0xFFB0];

    // 0x10000..0x20000
    uint8_t cartridgeRom[0x10000]; // 64Kibi
};
struct MachineInternals {
    struct AudioInternals audioInternals;
    bool hasAccessedPersistent;
    bool hasChangedPersistent;
    bool isEnergySaving;
    int energySavingTimer;
		bool planeColor0IsOpaque[4];
};
struct Core;
struct TextLib {
    struct Core *core;
    union CharacterAttributes charAttr;
    int fontCharOffset;
    int windowX;
    int windowY;
    int windowWidth;
    int windowHeight;
    int windowBg;
    int cursorX;
    int cursorY;
    int bg;
    int sourceAddress;
    int sourceWidth;
    int sourceHeight;
    char inputBuffer[INPUT_BUFFER_SIZE];
    int inputLength;
    int blink;
};
struct Core;
struct Overlay {
    struct Plane plane;
    struct TextLib textLib;
    int timer;
    int messageTimer;
};
struct RCString {
    int refCount;
    char chars[1]; // ...
};
struct Token {
    enum TokenType type;
    union {
        float floatValue;
        struct RCString *stringValue;
        int symbolIndex;
        struct Token *jumpToken;
    };
    int sourcePosition;
};
struct Tokenizer
{
    struct Token tokens[MAX_TOKENS];
    int numTokens;
    struct Symbol symbols[MAX_SYMBOLS];
    int numSymbols;

    struct JumpLabelItem jumpLabelItems[MAX_JUMP_LABEL_ITEMS];
    int numJumpLabelItems;
    struct SubItem subItems[MAX_SUB_ITEMS];
    int numSubItems;
};
union Value {
    float floatValue;
    struct RCString *stringValue;
    union Value *reference;
    enum ErrorCode errorCode;
};
struct Interpreter;
struct Token;
struct LabelStackItem {
    enum LabelType type;
    struct Token *token;
};
struct Core;
struct Interpreter;
struct SimpleVariable {
    int symbolIndex;
    int8_t subLevel;
    int8_t isReference:1;
    enum ValueType type;
    union Value v;
};
struct ArrayVariable {
    int symbolIndex;
    int8_t subLevel;
    int8_t isReference:1;
    enum ValueType type;
    int numDimensions;
    int dimensionSizes[MAX_ARRAY_DIMENSIONS];
    int numValues;
    union Value *values;
};
struct Interpreter;
struct Token;
struct Core;
struct SpritesLib {
    struct Core *core;
    int lastHit;
};
struct Core;
struct AudioLib {
    struct Core *core;
    int sourceAddress;

    struct ComposerPlayer musicPlayer;
    struct ComposerPlayer trackPlayers[NUM_VOICES];
};
struct DataEntry {
    char comment[ENTRY_COMMENT_SIZE];
    int start;
    int length;
};
struct DataManager {
    struct DataEntry entries[MAX_ENTRIES];
    uint8_t *data;
    const char *diskSourceCode;
};
#define EMITTER_MAX 16
#define SPAWNER_MAX 16
// TODO: EMITTER_MAX and SPAWNER_MAX should be the same, right?

struct Core;
struct ParticlesLib
{
    struct Core *core;

    int first_sprite_id;
    int pool_count;
    int pool_next_id;

    int particles_data_addr;
    struct Token *particles_update;
    struct Token *apperances_label[APPEARANCE_MAX];

    int emitters_count;
    int emitters_data_addr;
    struct Token *emitters_label[SPAWNER_MAX];

    // for PARTICLE sub token during interrupt
    int interrupt_sprite_id;
    int interrupt_particle_addr;

		// for EMITTER sub token during interrupt
		int interrupt_emitter_id;
		int interrupt_emitter_addr;
};
typedef struct pcg_state_setseq_64 pcg32_random_t;
struct Core;
enum Pass {
    PassPrepare,
    PassRun
};
enum State {
    StateNoProgram,
    StateEvaluate,
    StateInput,
    StatePaused,
    StateWaitForDisk,
    StateEnd
};
enum Mode {
    ModeNone,
    ModeMain,
    ModeInterrupt
};
struct Interpreter {
    const char *sourceCode;

    enum Pass pass;
    enum State state;
    enum Mode mode;
    struct Token *pc;
    int subLevel;
    int cycles;
    int interruptOverCycles;
    bool debug;
    bool handlesPause;
    int cpuLoadDisplay;
    int cpuLoadMax;
    int cpuLoadTimer;

    bool compat;

    struct Tokenizer tokenizer;

    struct DataManager romDataManager;

    struct LabelStackItem labelStackItems[MAX_LABEL_STACK_ITEMS];
    int numLabelStackItems;

    bool isSingleLineIf;

    struct SimpleVariable simpleVariables[MAX_SIMPLE_VARIABLES];
    int numSimpleVariables;
    struct ArrayVariable arrayVariables[MAX_ARRAY_VARIABLES];
    int numArrayVariables;
    struct RCString *nullString;

    struct Token *firstData;
    struct Token *lastData;
    struct Token *currentDataToken;
    struct Token *currentDataValueToken;

    struct Token *currentOnRasterToken;
    struct Token *currentOnVBLToken;
    struct Token *currentOnParticleToken;
		struct Token *currentOnEmitterToken;

    int waitCount;
    bool waitTap;
    bool exitEvaluation;
    // union Gamepad lastFrameGamepads[NUM_GAMEPADS];
    union IOStatus lastFrameIOStatus;
    float timer;
    int seed;
    union Value *lastVariableValue;

    struct TextLib textLib;
    struct SpritesLib spritesLib;
    struct AudioLib audioLib;
    struct ParticlesLib particlesLib;

    pcg32_random_t defaultRng;
};
struct Core;
struct DiskDrive {
    struct DataManager dataManager;
};
struct Core;
enum KeyboardMode {
    KeyboardModeOff,
    KeyboardModeOn,
    KeyboardModeOptional
};
struct ControlsInfo {
    enum KeyboardMode keyboardMode;
    bool isAudioEnabled;
};
struct CoreDelegate {
    void *context;

    /** Called on error */
    void (*interpreterDidFail)(void *context, struct CoreError coreError);

    /** Returns true if the disk is ready, false if not. In case of not, core_diskLoaded must be called when ready. */
    bool (*diskDriveWillAccess)(void *context, struct DataManager *diskDataManager);

    /** Called when a disk data entry was saved */
    void (*diskDriveDidSave)(void *context, struct DataManager *diskDataManager);

    /** Called when a disk data entry was tried to be saved, but the disk is full */
    void (*diskDriveIsFull)(void *context, struct DataManager *diskDataManager);

    /** Called when keyboard or gamepad settings changed */
    void (*controlsDidChange)(void *context, struct ControlsInfo controlsInfo);

    /** Called when persistent RAM will be accessed the first time */
    void (*persistentRamWillAccess)(void *context, uint8_t *destination, int size);

    /** Called when persistent RAM should be saved */
    void (*persistentRamDidChange)(void *context, uint8_t *data, int size);
};
struct Core
{
	struct Machine *machine;
	struct MachineInternals *machineInternals;
	struct Interpreter *interpreter;
	struct DiskDrive *diskDrive;
	struct Overlay *overlay;
	struct CoreDelegate *delegate;
};
void core_diskLoaded(struct Core *core);
struct Core;
struct Core;
struct Core;